// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create-document-version-rollback should handle non-existent version ID 1`] = `
{
  "content": [
    {
      "text": "{"status":404,"detail":"Not Found"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;

exports[`create-document-version-rollback should rollback document to a specific version 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;

exports[`create-document-version-rollback should rollback document to a specific version with culture 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;
